@@ -249,6 +249,14 @@ proc visibility_run {visibility} {
 	set VSBCFLAG ""
     }}}}}}}}}
 
+    if { [istarget powerpc*-*-linux*] } {
+	# Testing non-PIC libraries is a waste of effort on any target.
+	# If you don't pass -fpic or -fPIC to gcc, gcc will assume quite
+	# reasonably that you are not compiling for a shared library.
+	# It can then make optimisations that result in shared library
+	# functions and variables not being overridable.  Newer versions
+	# of gcc are more likely to do this.
+    } else {
     # Compile the main program.
     if ![ld_compile "$CC -g $CFLAGS $SHCFLAG $VSBCFLAG" $srcdir/$subdir/main.c $tmpdir/mainnp.o] {
 	unresolved "visibility ($visibility) (non PIC)"
@@ -369,8 +377,11 @@ proc visibility_run {visibility} {
 		visibility_test $visibility vp "visibility ($visibility)" mainnp.o sh1p.o sh2p.o elfvsb
 	    } }
 	}
-    }
+    }}
 
+    if { [istarget powerpc*-*-linux*] } {
+	# Don't bother.
+    } else {
     # Now do the same tests again, but this time compile main.c PIC.
     if ![ld_compile "$CC -g $CFLAGS $SHCFLAG $VSBCFLAG -DSHARED $picflag" $srcdir/$subdir/main.c $tmpdir/mainp.o] {
 	unresolved "visibility ($visibility) (PIC main, non PIC so)"
@@ -433,7 +444,7 @@ proc visibility_run {visibility} {
 	} else {
 	    unresolved "visibility ($visibility) (PIC main)"
 	}
-    }
+    }}
 }
 
 if [istarget mips*-*-*] {
